syntax = "proto3";

option go_package = "Full-Stack-Microservices/proto/gen;gen";

package products;

service ProductService {
  rpc CreateProduct(CreateProductRequest) returns (ProductResponse);
  rpc GetProduct(GetProductRequest) returns (ProductResponse);
}

message Product {
  string id = 1;
  string name = 2;
  double price = 3;
}

message CreateProductRequest {
  string name = 1;
  double price = 2;
}

message GetProductRequest {
  string id = 1;
}

message ProductResponse {
  Product product = 1;
}